# stream-music-gen

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  setup.py
1021_website_demo_audio_full/: example_to_instrument.json
1021_website_demo_audio_full/00009/: metadata.json
1021_website_demo_audio_full/00014/: metadata.json
1021_website_demo_audio_full/00017/: metadata.json
1021_website_demo_audio_full/00025/: metadata.json
1021_website_demo_audio_full/00031/: metadata.json
1021_website_demo_audio_full/00035/: metadata.json
1021_website_demo_audio_full/00049/: metadata.json
1021_website_demo_audio_full/00064/: metadata.json
1021_website_demo_audio_full/00267/: metadata.json
1021_website_demo_audio_full/00269/: metadata.json
1021_website_demo_audio_full/00452/: metadata.json
1021_website_demo_audio_full/00453/: metadata.json
1021_website_demo_audio_full/00464/: metadata.json
configs/online/: decoder_online_base.yml  decoder_online_future_visibility_-100.yml  decoder_online_future_visibility_0.yml  decoder_online_future_visibility_100.yml
configs/prefix_decoder/: prefix_decoder_base.yml  prefix_decoder_large_cluster.yml  prefix_decoder_small_cluster.yml
configs/stemgen/: stemgen_base.yml  stemgen_large.yml  stemgen_large_8_rvq.yml
scripts/: train_dec_online.py  train_prefix_dec.py  train_prefix_dec_online.py  train_stemgen.py
scripts/gen_pred/: gen_and_evaluate.py  gen_pred_dec_online.py  gen_pred_prefix_dec_online.py  gen_pred_prefix_decoder.py  (+5 more)
stream_music_gen/: base_trainer.py  constants.py
(+44 files in other folders)
